Bug 127815 - Non-breaking spaces not inserted when LibreOffice-KDE5 is installed, since Libo 6.3.x (French typo)
Summary: Non-breaking spaces not inserted when LibreOffice-KDE5 is installed, since Li...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.2.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:7.0.0 target:6.3.6 target:6.4.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: KDE, KF5
  Show dependency treegraph
 
Reported: 2019-09-27 08:34 UTC by Mahendra Tallur
Modified: 2021-04-21 16:46 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mahendra Tallur 2019-09-27 08:34:41 UTC
Hi ! 

In the French typography, a non-breaking space has to be inserted after the punctuation marks that are in 2 parts (i.e. ":" ";" "!"). Also, this space is not as wide as a regular space. 

I noticed this automatic feature stopped working since LibreOffice 6.3.x.
I double checked by reverting to Libo 6.1.x and 6.2.x : automatic non-breaking spaces work again. 

(I didn't manage to add them manually either, but existing non-breaking spaces still appear in grey in former documents)

I'm using : KDE Neon (Ubuntu 18.04 repos). I installed Libo 6.2 with the official 6.2 PPA. And Libo 6.3.1 rc2 with the official Libo "fresh" PPA. Of course, it happens with all texts, they are properly detected as French, the localization is perfectly installed and the option is properly ticked :-)
Comment 1 Mahendra Tallur 2019-09-27 08:37:36 UTC
I would like to confirm the issue also happens when using the official 6.3.2 DEBs.
Comment 2 Mahendra Tallur 2019-09-27 08:56:52 UTC
Another remark :

actually it seems partly broken.

- it DOES NOT work with "!" and ":" (which are the most common use cases)
- it DOES work with ";" and """

All of those did work with the 6.1.x and 6.2.x releases.
Cheers !
Comment 3 Mahendra Tallur 2019-09-27 10:08:08 UTC
It turned out the bug only occurs when LibreOffice-KDE5 is installed.

So, to sum up :

- the bug does NOT occur with Libo 6.1 and 6.2 with LibreOffice-KDE5
- the bug does NOT occur with Libo 6.3 WITHOUT LibreOffice-KDE5
- the bug DOES occur with Libo 6.3 AND LibreOffice-KDE5.

And only SOME characters are affected, such as ":" and "!".

Same behaviour under (K)Ubuntu 19.10 beta, 18.04, from the PPA or official builds.
Comment 4 Michael Weghorn 2019-10-02 07:22:26 UTC
I can reproduce with LibreOffice 6.3 as provided in Debian testing. Steps:

1) open new document in Writer
2) switch language of paragraph to "French (France)" (e.g. by right-clicking on the language entry in the status bar -> "Set Language for paragraph")
3) type "a:"

result with kf5 plugin: just "a:" is inserted

result with gtk3 VCL plugin: "a<NON_BREAKING_SPACE>:" is inserted

Version: 6.3.2.2
Build ID: 1:6.3.2-1
CPU threads: 4; OS: Linux 5.2; UI render: default; VCL: kde5; 
Locale: en-GB (en_GB.UTF-8); UI-Language: en-GB
Calc: threaded
Comment 5 Jan-Marek Glogowski 2019-11-22 12:21:24 UTC
This is a regression of the fix for bug 124118. I knew the fix was not really correct, to forward all the key input to the IM handler, but couldn't find a way to fix it for real. At least from my understanding of IM and toolkit integration

AFAIK it boils down to extra IM processing of key events, which Gtk+ does via gtk_im_context_filter_keypress. I couldn't find anything like that in the Qt API.

Probably better to revert the fix for bug 124118?
Comment 6 Buovjaga 2019-12-18 19:08:18 UTC
(In reply to Michael Weghorn from comment #4)
> I can reproduce with LibreOffice 6.3 as provided in Debian testing. Steps:
> 
> 1) open new document in Writer
> 2) switch language of paragraph to "French (France)" (e.g. by right-clicking
> on the language entry in the status bar -> "Set Language for paragraph")
> 3) type "a:"
> 
> result with kf5 plugin: just "a:" is inserted
> 
> result with gtk3 VCL plugin: "a<NON_BREAKING_SPACE>:" is inserted

I confirm with the revert patch this works again.
https://gerrit.libreoffice.org/#/c/84821/

Arch Linux 64-bit
Version: 6.5.0.0.alpha0+
Build ID: d988b1539c04b18d5a2793348c158e0e692b4619
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: kf5; 
Locale: fi-FI (fi_FI.UTF-8); UI-Language: en-US
Calc: threaded
Built on 17 December 2019
Comment 7 Michael Weghorn 2020-02-22 09:14:39 UTC
Comment 5 mentions the commit causing the regression.

I'm looking into this together with tdf#130071.
Comment 8 Commit Notification 2020-02-28 09:51:16 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1c6ea413cb01c0b482f87e625ba208eec230618a

tdf#130071 tdf#127815 qt5: Use ExtTextInput only for multi-char key events

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2020-02-28 11:05:51 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/aea2b7b197dc1becb1149504ce0de499574504f2

tdf#130071 tdf#127815 qt5: Use ExtTextInput only for multi-char key events

It will be available in 6.3.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2020-02-28 11:06:19 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/b304ff4b7de22132d397df88cd99cea64159e24f

tdf#130071 tdf#127815 qt5: Use ExtTextInput only for multi-char key events

It will be available in 6.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Xisco Faulí 2020-03-04 12:11:17 UTC
@Mahendra, could you please verify the issue is fixed with a recent build from https://dev-builds.libreoffice.org/daily/ ?
Comment 12 Mahendra Tallur 2020-03-04 16:53:00 UTC
@Xisco Fauli :

I confirm the problem is indeed *fixed* in the daily build ! Thanks to everyone involved !
Comment 13 Xisco Faulí 2020-03-04 16:54:41 UTC
Thanks for checking. Setting to VERIFIED
Comment 14 Jeff Fortin Tam 2021-03-08 04:45:58 UTC
Hmm, this says it was supposed to be fixed in 7.0.0, but I'm seeing this on LibreOffice 7.0.4.2 (GTK3 version, on Fedora), tested both with fr_CA and fr_FR. Non-breaking spaces do not get auto-added before the ":", ";", "!" and "?", even if that rule is turned on in the autocorrect settings. Am I missing something?
Comment 15 Buovjaga 2021-03-08 06:24:41 UTC
(In reply to Jean-François Fortin Tam from comment #14)
> Hmm, this says it was supposed to be fixed in 7.0.0, but I'm seeing this on
> LibreOffice 7.0.4.2 (GTK3 version, on Fedora), tested both with fr_CA and
> fr_FR. Non-breaking spaces do not get auto-added before the ":", ";", "!"
> and "?", even if that rule is turned on in the autocorrect settings. Am I
> missing something?

As you can see, the fix targeted Qt5, not GTK3. So you are apparently seeing some other issue. Test one more time with 7.2 and if needed, open a new report
Comment 16 Jeff Fortin Tam 2021-03-08 14:10:51 UTC
Confirming as affecting the daily build of 7.2 when testing with the AppImage packages, so opened bug #140882.
Comment 17 François Pernoud 2021-04-21 16:46:38 UTC
I confirm this bug seems to be related to libreoffice-gtk3.

My environment is Ubuntu 21.04 and Libreoffice 7.1.2.2. The bug disappears when removing the package libreoffice-gtk3, reappears when reinstalling it.