tdf#127815 Revert "tdf#124118 Qt5 post non-code keys via ExtTextInput"

It's not really a revert, as that included some larger refactoring
of the key in combination with IM handling. This just reverts the
minimal real functionality in the key handler. Originally I tried
to remove the unused QWidget, but this is eventually needed for a
real fix, so this keeps that.

This reverts commit 7140da917bbe80ad39610fdac28f03859f089461.

Change-Id: I2cf7d7c328526c539638b00aeb52136c2877003a